src/test/ui/suggestions/impl-trait-return-trailing-semicolon.stderr
error[E0277]: the trait bound `(): Bar` is not satisfied
  --> $DIR/impl-trait-return-trailing-semicolon.rs:3:22
   |
LL |   fn foo() -> impl Bar {
   |  ______________________^
LL | |     5;
LL | | }
   | |_^ the trait `Bar` is not implemented for `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
